--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,10 @@
             <id>sonatype</id>
             <url>https://oss.sonatype.org/content/repositories/public/</url>
         </repository>
+        <repository>
+            <id>central</id>
+            <url>http://repo1.maven.org/maven2</url>
+        </repository>
     </repositories>
 
     <dependencies>
@@ -36,6 +40,11 @@
             <groupId>io.github.opencubicchunks</groupId>
             <artifactId>regionlib</artifactId>
             <version>0.52.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.carrotsearch</groupId>
+            <artifactId>hppc</artifactId>
+            <version>0.8.1</version>
         </dependency>
     </dependencies>
 
