--- a/pom.xml
+++ b/pom.xml
@@ -38,4 +38,23 @@
             <version>0.8.1</version>
         </dependency>
     </dependencies>
+
+    <build>
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <excludes>
+                    <exclude>io.github.opencubicchunks.worldpainterplugin.version.properties</exclude>
+                </excludes>
+                <filtering>false</filtering>
+            </resource>
+            <resource>
+                <directory>src/main/resources</directory>
+                <includes>
+                    <include>io.github.opencubicchunks.worldpainterplugin.version.properties</include>
+                </includes>
+                <filtering>true</filtering>
+            </resource>
+        </resources>
+    </build>
 </project>
