--- a/pom.xml
+++ b/pom.xml
@@ -8,11 +8,11 @@
     <artifactId>worldpainterplugin</artifactId>
     <version>1.3.0</version>
 
-    <!--<parent>
+    <parent>
         <groupId>org.pepsoft.worldpainter</groupId>
         <artifactId>PluginParent</artifactId>
-        <version>1.3.0-SNAPSHOT</version>
-    </parent>-->
+        <version>1.5.0-SNAPSHOT</version>
+    </parent>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -27,50 +27,6 @@
     </repositories>
 
     <dependencies>
-        <dependency>
-            <groupId>org.pepsoft.worldpainter</groupId>
-            <artifactId>WPGUI</artifactId>
-            <version>2.8.8</version>
-            <scope>provided</scope>
-            <exclusions>
-                <exclusion>
-                    <groupId>org.pepsoft.worldpainter</groupId>
-                    <artifactId>WPDynmapPreviewer</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>net.sourceforge</groupId>
-                    <artifactId>jpen</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>com.jidesoft</groupId>
-                    <artifactId>*</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>org.netbeans.swing</groupId>
-                    <artifactId>laf-dark</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>com.nativelibs4java</groupId>
-                    <artifactId>bridj</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>ch.qos.logback</groupId>
-                    <artifactId>logback-classic</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>org.slf4j</groupId>
-                    <artifactId>jcl-over-slf4j</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>org.slf4j</groupId>
-                    <artifactId>jul-to-slf4j</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>org.apache.logging.log4j</groupId>
-                    <artifactId>log4j-to-slf4j</artifactId>
-                </exclusion>
-            </exclusions>
-        </dependency>
         <dependency>
             <groupId>io.github.opencubicchunks</groupId>
             <artifactId>regionlib</artifactId>
